# marlin

./: .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml  getting_started.html  index.html  introduction.html  name.html  print.html  release-please-config.json  searchindex.js  searchindex.json  toc.html  toc.js
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  codspeed.yaml  docs.yaml  lint.yaml
benches/: repeatedly_build_verilog.rs
book/: SUMMARY.md  book.toml
book/internal/: release-process.md  verilator-port-generation.md  wide-support.md
book/reference/: bridging-macros.md  dynamic-api-values.md  vcd.md
book/spade/: quickstart.md
book/src/spade/: quickstart.md
book/src/verilog/: dpi.md  dynamic.md  quickstart.md
book/verilog/: dpi.md  dynamic.md  quickstart.md  wide.md
book/veryl/: quickstart.md
docs/: testing_spade.md  testing_verilog.md  verilog_dpi.md  verilog_dynamic_models.md
docs_old/: testing_verilog.md
examples/spade-project/: Cargo.toml
examples/spade-project/src/: lib.rs  main.spade
examples/spade-project/tests/: simple_test.rs
examples/verilog-project/: Cargo.toml  foo.vcd
examples/verilog-project/src/: defines.sv  dpi.sv  lib.rs  main.sv  tutorial.rs  very_wide_1024.sv  very_wide_main.sv  very_wide_registered.sv  wide_main.sv
examples/verilog-project/test/: dpi_tutorial.rs  tutorial.rs  visibility_works.rs
examples/verilog-project/tests/: as_dynamic_model.rs  dpi_tutorial.rs  dynamic_model_tutorial.rs  simple_test.rs  tracing.rs  very_wide_support.rs  visibility_works.rs  wide_support.rs
examples/veryl_project/: .gitignore  Cargo.toml
examples/veryl_project/src/: main.veryl
examples/veryl_project/tests/: simple_test.rs
internal/: about-internal.html  how-it-works.html  name.html  release-process.html  verilator-port-generation.html  verilator-runtime.html  wide-support.html
language-support/spade/: Cargo.toml
language-support/spade-macro/: Cargo.toml
language-support/spade-macro/src/: lib.rs  parse_spade.rs  swim.rs
language-support/spade/src/: lib.rs
language-support/verilog/: Cargo.toml
language-support/verilog-macro/: Cargo.toml
language-support/verilog-macro-builder/: Cargo.toml
language-support/verilog-macro-builder/src/: lib.rs
language-support/verilog-macro/src/: lib.rs
language-support/verilog/src/: lib.rs
language-support/veryl/: Cargo.toml
language-support/veryl-macro/: Cargo.toml
language-support/veryl/src/: lib.rs
marlin/src/: lib.rs
reference/: bridging-macros.html  dynamic-api-values.html  model-traits.html  vcd.html
spade/: quickstart.html
src/: lib.rs
tooling/swim-marlin/: Cargo.toml  README.md
tooling/swim-marlin/src/: main.rs
verilator/: Cargo.toml
verilator/src/: build_library.rs  dpi.rs  dynamic.rs  ffi_names.rs  lib.rs  nocapture.rs  vcd.rs
verilog/: dpi.html  dynamic.html  quickstart.html  reference.html  tutorials.html  usage.html  vcd.html  wide.html
verilog-support/: lib.rs
verilog-support/example-project/: Cargo.toml
verilog/reference/: model-traits.html  vcd.html
veryl/: quickstart.html
(+11 files in other folders)
