[package]
name = "marlin-spade-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
marlin-verilog-macro-builder.workspace = true
marlin-verilator.workspace = true
camino.workspace = true
snafu.workspace = true

proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

spade-parser.workspace = true
spade-ast.workspace = true
spade-common.workspace = true
spade-lang.workspace = true
spade-diagnostics.workspace = true
spade-codespan-reporting.workspace = true
