[package]
name = "marlin-verilog-macro-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
marlin-verilator.workspace = true

proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

sv-parser.workspace = true

[lints]
workspace = true
