[package]
name = "swim-marlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license = "GPL-3.0"

[dependencies]
snafu.workspace = true
camino.workspace = true
toml.workspace = true
argh.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
threadpool.workspace = true
